--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crypto-js": "^4.0.0",
     "css-loader": "^3.4.1",
     "dayjs": "^1.10.5",
+    "echarts": "^5.2.1",
     "element-ui": "^2.13.0",
     "mockjs": "^1.1.0",
     "monaco-editor": "^0.21.3",
@@ -33,6 +34,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.0",
+    "skeleton-loader": "^2.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
