--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^3.4.1",
     "dayjs": "^1.10.5",
     "echarts": "^5.2.1",
+    "echarts-liquidfill": "^3.1.0",
     "element-ui": "^2.13.0",
     "mockjs": "^1.1.0",
     "monaco-editor": "^0.21.3",
