--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mockjs": "^1.1.0",
     "monaco-editor": "^0.21.3",
     "mqtt": "^4.2.8",
+    "view-design": "^4.7.0-rc.1",
     "vue": "^2.6.11",
     "vue-router": "3.1.0",
     "vue-sketch-ruler": "^1.0.3",
